--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\jjani\\.virtualenvs\\webservice-paem-JzeA-jMw\\Scripts\\python.exe"
+    "python.pythonPath": "c:\\users\\francisco\\appdata\\local\\programs\\python\\python38\\python.exe"
 }
