--- a/.github/workflows/deploy_mva_webservice.yml
+++ b/.github/workflows/deploy_mva_webservice.yml
@@ -14,7 +14,7 @@ jobs:
       uses: appleboy/ssh-action@master
       with: 
         host: ${{secrets.SERVER_HOST}}
-        port: ${{sercrets.SERVER_PORT}}
+        port: ${{secrets.SERVER_PORT}}
         username: ${{secrets.SERVER_USER}}
         password: ${{secrets.SERVER_PASSWORD}}
         script: |
