--- a/.github/workflows/mva_webservice_deploy.yml
+++ b/.github/workflows/mva_webservice_deploy.yml
@@ -18,8 +18,7 @@ jobs:
         username: ${{secrets.SERVER_USER}}
         password: ${{secrets.SERVER_PASSWORD}}
         script: |
-          cd app/webservice-paem
-          git pull
+          git clone https://${{secrets.ACCESS_TOKEN}}github.com/Alfser/webservice-paem.git
           systemctl restart webservice
           systemctl status webservice
 
