--- a/.github/workflows/mva_webservice_deploy.yml
+++ b/.github/workflows/mva_webservice_deploy.yml
@@ -18,8 +18,10 @@ jobs:
         username: ${{secrets.SERVER_USER}}
         password: ${{secrets.SERVER_PASSWORD}}
         script: |
-          git clone https://${{secrets.ACCESS_TOKEN}}github.com/Alfser/webservice-paem.git
-          systemctl restart webservice
+          git clone https://${{secrets.ACCESS_TOKEN}}@github.com/Alfser/webservice-paem.git
+          sudo systemctl restart webservice
+          ${{secrets.SERVER_USER}}
+          ${{secrets.SERVER_PASSWORD}}
           systemctl status webservice
 
 
