--- a/.github/workflows/mva_webservice_deploy.yml
+++ b/.github/workflows/mva_webservice_deploy.yml
@@ -1,28 +1,24 @@
-name: Deployment Workflow Webservice
+# name: Deployment Workflow Webservice
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
     
-jobs:
-  job_mva:
-    name: Deploy
-    runs-on: ubuntu-latest
-    steps:
-    - name: Running server ssh connection
-      uses: appleboy/ssh-action@master
-      with: 
-        host: ${{secrets.SERVER_HOST}}
-        port: ${{secrets.SERVER_PORT}}
-        username: ${{secrets.SERVER_USER}}
-        password: ${{secrets.SERVER_PASSWORD}}
-        script: |
-          git clone https://${{secrets.ACCESS_TOKEN}}@github.com/Alfser/webservice-paem.git
-          sudo systemctl restart webservice
-          ${{secrets.SERVER_USER}}
-          ${{secrets.SERVER_PASSWORD}}
-          systemctl status webservice
+# jobs:
+#   job_mva:
+#     name: Deploy
+#     runs-on: ubuntu-latest
+#     steps:
+#     - name: Running server ssh connection
+#       uses: appleboy/ssh-action@master
+#       with: 
+#         host: ${{secrets.SERVER_HOST}}
+#         port: ${{secrets.SERVER_PORT}}
+#         username: ${{secrets.SERVER_USER}}
+#         password: ${{secrets.SERVER_PASSWORD}}
+#         script: |
+#           git pull
 
 
 
